# FinancialAnalyst-Agent

./: .gitignore  README.md  data_analysis.md  execution.md  pyproject.toml  risk_management.md
src/financialanalyst/: crew.py  main.py
src/financialanalyst/config/: agents.yaml  tasks.yaml
