[project]
name = "financialanalyst"
version = "0.1.0"
description = "FinancialAnalyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.40.1",
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
financialanalyst = "financialanalyst.main:run"
run_crew = "financialanalyst.main:run"
train = "financialanalyst.main:train"
replay = "financialanalyst.main:replay"
test = "financialanalyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
